# CppChessEngine

./: Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  Color.h  Game.cpp  Game.h  Move.h  main.cpp
pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.cpp  Piece.h  Queen.h  Rook.h
